--- a/quad_ws/src/quad_motors/package.xml
+++ b/quad_ws/src/quad_motors/package.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
+  <name>quad_motors</name>
   <version>0.0.0</version>
   <description>TODO: Package description</description>
   <maintainer email="reubenstrangelove@gmail.com">devpc</maintainer>
