vibecoded to fix srvo motor ds3218ssg

--- a/quad_ws/src/quad_motors/config/servo_parameters.yaml
+++ b/quad_ws/src/quad_motors/config/servo_parameters.yaml
@@ -51,18 +51,18 @@ min_degrees:
 - -90
 - -90
 pulse_width_per_degree:
-- 11.5
-- 11.5
-- 11.5
-- 11.5
-- 11.5
-- 11.5
-- 11.5
-- 11.5
-- 11.5
-- 11.5
-- 11.5
-- 11.5
+- 7.41  # DS3218SSG Pro (270° range)
+- 7.41
+- 7.41
+- 7.41
+- 7.41
+- 7.41
+- 7.41
+- 7.41
+- 7.41
+- 7.41
+- 7.41
+- 7.41
 zero_degrees_pulse_width:
 - 1480
 - 1550
