--- a/quad_ws/src/quad_motors/config/servo_parameters.yaml
+++ b/quad_ws/src/quad_motors/config/servo_parameters.yaml
@@ -1,16 +1,21 @@
+# DS3218SSG Pro Servo Parameters
+# Calibrated: 2026-02-01
+# Pulse width per degree: 7.41 µs/° (270° range = 2000µs travel)
+
 invert_direction:
-- false
-- false
-- false
-- false
-- true
-- true
-- false
-- false
-- false
-- false
-- true
-- true
+- false  # 0: FL Hip
+- false  # 1: FL Femur
+- false  # 2: FL Tibia
+- false  # 3: FR Hip
+- true   # 4: FR Femur (inverted)
+- true   # 5: FR Tibia (inverted)
+- false  # 6: BL Hip
+- false  # 7: BL Femur
+- false  # 8: BL Tibia
+- false  # 9: BR Hip
+- true   # 10: BR Femur (inverted)
+- true   # 11: BR Tibia (inverted)
+
 map_joint_index_to_driver_pin:
 - 4   # Joint 0: FL Hip -> PIN4
 - 3   # Joint 1: FL Femur -> PIN3
@@ -24,32 +29,36 @@ map_joint_index_to_driver_pin:
 - 11  # Joint 9: BR Hip -> PIN11
 - 6   # Joint 10: BR Femur -> PIN6
 - 8   # Joint 11: BR Tibia -> PIN8
-max_degrees:
-- 30
-- 90
-- 0
-- 30
-- 0
-- 0
-- 30
-- 90
-- 0
-- 30
-- 0
-- 0
+
+# Angle limits from calibration
 min_degrees:
-- -30
-- 0
-- -90
-- -30
-- -90
-- -90
-- -30
-- 0
-- -90
-- -30
-- -90
-- -90
+- -45  # 0: FL Hip
+- -45  # 1: FL Femur
+- -50  # 2: FL Tibia
+- -45  # 3: FR Hip
+- -45  # 4: FR Femur
+- -50  # 5: FR Tibia
+- -45  # 6: BL Hip
+- -45  # 7: BL Femur
+- -50  # 8: BL Tibia
+- -45  # 9: BR Hip
+- -45  # 10: BR Femur
+- -50  # 11: BR Tibia
+
+max_degrees:
+- 45  # 0: FL Hip
+- 45  # 1: FL Femur
+- 0   # 2: FL Tibia
+- 45  # 3: FR Hip
+- 45  # 4: FR Femur
+- 0   # 5: FR Tibia
+- 45  # 6: BL Hip
+- 45  # 7: BL Femur
+- 0   # 8: BL Tibia
+- 45  # 9: BR Hip
+- 45  # 10: BR Femur
+- 0   # 11: BR Tibia
+
 pulse_width_per_degree:
 - 7.41  # DS3218SSG Pro (270° range)
 - 7.41
@@ -63,16 +72,18 @@ pulse_width_per_degree:
 - 7.41
 - 7.41
 - 7.41
+
+# Calibrated zero position pulse widths (µs)
 zero_degrees_pulse_width:
-- 1480
-- 1550
-- 1475
-- 1450
-- 1425
-- 1480
-- 1475
-- 1510
-- 1450
-- 1490
-- 1575
-- 1565
+- 1500  # 0: FL Hip
+- 1425  # 1: FL Femur
+- 1500  # 2: FL Tibia
+- 1500  # 3: FR Hip
+- 1403  # 4: FR Femur
+- 1462  # 5: FR Tibia
+- 1500  # 6: BL Hip
+- 1425  # 7: BL Femur
+- 1425  # 8: BL Tibia
+- 1500  # 9: BR Hip
+- 1500  # 10: BR Femur
+- 1484  # 11: BR Tibia
