--- a/quad_ws/src/quad_motors/config/servo_parameters.yaml
+++ b/quad_ws/src/quad_motors/config/servo_parameters.yaml
@@ -2,21 +2,20 @@
 # Calibrated: 2026-02-01
 # Pulse width per degree: 7.41 µs/° (270° range = 2000µs travel)
 
-# Inversion pattern from calibration tool defaults
-# Right side femur/tibia are inverted due to mirror mounting
+# Inversions handled by calibration tool - all set to false
 invert_direction:
 - false  # 0: FL Hip
 - false  # 1: FL Femur
-- false  # 2: FL Tibia (not inverted - left side)
+- false  # 2: FL Tibia
 - false  # 3: FR Hip
-- true   # 4: FR Femur (inverted - right side)
-- true   # 5: FR Tibia (inverted - right side)
+- false  # 4: FR Femur
+- false  # 5: FR Tibia
 - false  # 6: BL Hip
 - false  # 7: BL Femur
-- false  # 8: BL Tibia (not inverted - left side)
+- false  # 8: BL Tibia
 - false  # 9: BR Hip
-- true   # 10: BR Femur (inverted - right side)
-- true   # 11: BR Tibia (inverted - right side)
+- false  # 10: BR Femur
+- false  # 11: BR Tibia
 
 map_joint_index_to_driver_pin:
 - 4   # Joint 0: FL Hip -> PIN4
