--- a/quad_ws/src/quad_motors/config/servo_parameters.yaml
+++ b/quad_ws/src/quad_motors/config/servo_parameters.yaml
@@ -7,13 +7,13 @@
 invert_direction:
 - false  # 0: FL Hip
 - false  # 1: FL Femur
-- false  # 2: FL Tibia (not inverted - left side)
+- true   # 2: FL Tibia (inverted - mirror mount)
 - false  # 3: FR Hip
 - true   # 4: FR Femur (inverted - right side)
 - true   # 5: FR Tibia (inverted - right side)
 - false  # 6: BL Hip
 - false  # 7: BL Femur
-- false  # 8: BL Tibia (not inverted - left side)
+- true   # 8: BL Tibia (inverted - mirror mount)
 - false  # 9: BR Hip
 - true   # 10: BR Femur (inverted - right side)
 - true   # 11: BR Tibia (inverted - right side)
